# TestTaskID

./: CMakeLists.txt  icons.qrc  leftmenu.cpp  leftmenu.h  main.cpp  mainwindow.cpp  mainwindow.h  qwinwidget.cpp  qwinwidget.h  widget.cpp  widget.h  winnativewindow.cpp
resources/: icons.qrc
